# languages-of-the-world

./: .gitignore  HOW-TO-RELEASE.md  README.md  low.md  prompt.md  pyproject.toml  test.ipynb
.github/workflows/: ci.yml  release.yml  scraper.yml
doc/: GITHUB_WORKFLOWS.md  HOW-TO-RELEASE.md  WEB_SCRAPER.md
examples/: 01_languages_per_country.ipynb  02_scraper_analysis.ipynb  03_endangered_languages_by_continent.ipynb  04_language_families.ipynb  05_speaker_source_disagreement.ipynb  06_official_vs_spoken.ipynb  07_endonyms_and_exonyms.ipynb  08_scripts_of_the_world.ipynb  09_languages_without_borders.ipynb  10_top_languages_by_speakers.ipynb
src/low/: __init__.py  bootstrap.py  collections.py  graph.py  models.py
src/low/data/: low_db.json
src/low/data/sources/: cia_speakers.json  cldr_speakers.json  linguameta_scripts.json  linguameta_speakers.json  low_scraper_speakers.json  wikidata_speakers.json
src/low/scraper/: __init__.py  aggregate.py  cache.py  cli.py  fetch.py  import_speakers.py  llm.py  pipeline.py  robots.py  rounds.py  scrape.py  state.py
src/low/scraper/tasks/: __init__.py  base.py  speakers.py
tests/: conftest.py  test_collections.py  test_graph.py  test_real_db.py  test_scraper_pipeline.py
