[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "languages-of-the-world"
version = "0.1.0"
description = "Languages of the World — an in-memory object graph for language, country, continent, and regional data"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = ["languages", "iso639", "countries", "linguistics", "data"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = []

[project.optional-dependencies]
examples = ["pandas>=2.0", "plotly>=5.0", "matplotlib>=3.7", "nbformat>=4.2.0"]
bootstrap = ["requests>=2.28"]
scraper = [
    "requests>=2.31",
    "trafilatura>=1.8",
    "click>=8.1",
    "python-dotenv>=1.0",
    "tqdm>=4.66",
    "google-genai>=1.0",
]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "requests>=2.28", "pandas>=2.0", "plotly>=5.0", "matplotlib>=3.7"]

[project.scripts]
low-scraper = "low.scraper.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/low"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests", "/README.md", "/pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short"
